--- a/src/main/resources/application-redisHost.properties
+++ b/src/main/resources/application-redisHost.properties
@@ -1,9 +1,9 @@
 ##单服务器
-spring.redis.host=${REDIS_HOST:redis}
+spring.redis.host=redis
 ##单端口
-spring.redis.port=${REDIS_PORT:6379}
+spring.redis.port=6379
 ## 连接密码
-spring.redis.password=${REDIS_PASSWORD:123456}
+spring.redis.password=123456
 
 ## 连接池最大连接数（使用负值表示没有限制） 
 spring.redis.pool.max-active=300
