--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,14 @@
-ws.port=${SERVER_PORT:9094}
-server.tomcat.max-threads=${TOMCAT_THREADS:800}
-server.tomcat.accept-count=${TOMCAT_ACCEPT_COUNT:2000}
-server.tomcat.max-connections=${TOMCAT_MAX_CONNECTIONS:10000}
+ws.port=9094
+server.tomcat.max-threads=800
+server.tomcat.accept-count=2000
+server.tomcat.max-connections=10000
 
 # 配置文件加载
-spring.profiles.active=${PROFILES_ACTIVE:redisCluster}
+spring.profiles.active=redisCluster
 
 # 日志配置
-logging.level.desaysv=${LOG_DESAYSV_LEVEL:debug}
-logging.level.org.springframework=${LOG_SPRINGFRAMEWORK_LEVEL:warn}
+logging.level.desaysv=debug
+logging.level.org.springframework=warn
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=warn
 
 # Dubbo Config properties
@@ -19,7 +19,7 @@ dubbo.scan.basePackages=com.apigate
 ## RegistryConfig Bean
 dubbo.registry.id=demo-apigate-consumer
 dubbo.registry.protocol=zookeeper
-dubbo.registry.address=${ZOOKEEPER_SERVER:10.219.8.132:2185,10.219.8.133:2185,10.219.8.134:2185}
+dubbo.registry.address=10.219.8.132:2185,10.219.8.133:2185,10.219.8.134:2185
 dubbo.consumer.retries=-1
 dubbo.consumer.check=false
 dubbo.consumer.timeout=60000
